Updated file with unit testing

--- a/Regression models.ipynb
+++ b/Regression models.ipynb
@@ -21,14 +21,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "2ba389db",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import unittest"
+    "import numpy as np\n",
+    "import unittest\n",
+    "import string\n",
+    "from nltk import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5193b192",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -40,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "a91f9c81",
    "metadata": {},
    "outputs": [
@@ -177,7 +191,7 @@
        "4  2019-10-22 00:00:00           90.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "49cd48af",
    "metadata": {},
    "outputs": [
@@ -308,7 +322,7 @@
        "[15333 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,114 +343,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "230f5b93",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>critic_review</th>\n",
-       "      <th>critics_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>There's a category of games I think of as Satu...</td>\n",
-       "      <td>79.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>With The Outer Worlds, Obsidian has found its ...</td>\n",
-       "      <td>85.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A deep, funny, and intricately designed RPG re...</td>\n",
-       "      <td>90.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>The Outer Worlds marks Obsidian operating at t...</td>\n",
-       "      <td>90.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Classic RPG sensibilities enhance wonderful ch...</td>\n",
-       "      <td>93.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15338</th>\n",
-       "      <td>Yes, Ubisoft did it again. Another brand new I...</td>\n",
-       "      <td>85.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15339</th>\n",
-       "      <td>For Honor developed from a promising concept t...</td>\n",
-       "      <td>60.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15340</th>\n",
-       "      <td>For Honor is an incredibly competitive multipl...</td>\n",
-       "      <td>75.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15342</th>\n",
-       "      <td>For Honor is an impressive fighting game with ...</td>\n",
-       "      <td>90.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15343</th>\n",
-       "      <td>Despite its few rather minor flaws, For Honor ...</td>\n",
-       "      <td>77.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>11759 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                           critic_review  critics_score\n",
-       "0      There's a category of games I think of as Satu...           79.0\n",
-       "1      With The Outer Worlds, Obsidian has found its ...           85.0\n",
-       "3      A deep, funny, and intricately designed RPG re...           90.0\n",
-       "4      The Outer Worlds marks Obsidian operating at t...           90.0\n",
-       "6      Classic RPG sensibilities enhance wonderful ch...           93.0\n",
-       "...                                                  ...            ...\n",
-       "15338  Yes, Ubisoft did it again. Another brand new I...           85.0\n",
-       "15339  For Honor developed from a promising concept t...           60.0\n",
-       "15340  For Honor is an incredibly competitive multipl...           75.0\n",
-       "15342  For Honor is an impressive fighting game with ...           90.0\n",
-       "15343  Despite its few rather minor flaws, For Honor ...           77.0\n",
-       "\n",
-       "[11759 rows x 2 columns]"
+       "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +361,7 @@
    "source": [
     "df2 = df2.dropna()\n",
     "\n",
-    "df2"
+    "type(df2)"
    ]
   },
   {
@@ -464,32 +381,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "0b00f3e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reviews = df.loc[:,'critic_review'].values\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0eb29081",
    "metadata": {},
    "source": [
-    "## Process text"
+    "## Process text code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "c9d86003",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#remove punctuation\n",
+    "def remove_punctuation(reviews):\n",
+    "    punctuation = string.punctuation\n",
+    "    new_list = []\n",
+    "    for review in reviews:\n",
+    "        new_string = ''\n",
+    "        for letter in review:\n",
+    "            if letter not in punctuation:\n",
+    "                new_string += letter\n",
+    "        new_list.append(new_string)\n",
+    "    \n",
+    "    return new_list #explain the difficulty in refactoring this code due to the number of components\n",
+    "\n",
+    "#lemmatize\n",
+    "def lemmatize_review(review):\n",
+    "    lem = WordNetLemmatizer()\n",
+    "    lemmatized_review = [lem.lemmatize(r) for r in review]\n",
+    "    return lemmatized_review\n",
+    "\n",
+    "#use tfidfVectorizer to convert words to lowercase, removes stopwords and tokenizes the data\n",
+    "def tfidfvectorize_reviews(review):\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    vectorizer = TfidfVectorizer(stop_words=stop_words)\n",
+    "    fit_review = vectorizer.fit_transform(review)\n",
+    "    matrix = fit_review.toarray()\n",
+    "    return matrix\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "1e623628",
    "metadata": {},
    "source": [
-    "## Test environment code"
+    "## Unit tests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "id": "f0ed0359",
    "metadata": {},
    "outputs": [
@@ -497,29 +452,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "test_func_exists (__main__.TestTextFormatting) ... ERROR\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_func_exists (__main__.TestTextFormatting)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-14-5f53f64c0f7c>\", line 4, in test_func_exists\n",
-      "    self.assertIsNotNone(process_text)\n",
-      "NameError: name 'process_text' is not defined\n",
+      "test_lemaatizer_exists (__main__.TestTextFormatting) ... ok\n",
+      "test_punctuation_removed (__main__.TestTextFormatting) ... ok\n",
+      "test_remove_punc_exists (__main__.TestTextFormatting) ... ok\n",
+      "test_vectorizer_exists (__main__.TestTextFormatting) ... ok\n",
+      "test_words_lemmatized (__main__.TestTextFormatting) ... ok\n",
+      "test_words_vectorized (__main__.TestTextFormatting) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 6 tests in 0.005s\n",
       "\n",
-      "FAILED (errors=1)\n"
+      "OK\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x28766356488>"
+       "<unittest.main.TestProgram at 0x1e88c279588>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,11 +479,53 @@
    "source": [
     "class TestTextFormatting(unittest.TestCase):\n",
     "    \n",
-    "    def test_func_exists(self):\n",
-    "        self.assertIsNotNone(process_text)\n",
+    "    def test_remove_punc_exists(self):\n",
+    "        self.assertIsNotNone(remove_punctuation)\n",
+    "    \n",
+    "    def test_punctuation_removed(self):\n",
+    "        res = remove_punctuation(['x'+ string.punctuation, 'y'+ string.punctuation])\n",
+    "        for r in res:\n",
+    "            self.assertNotRegex(r,'[\\W]')\n",
+    "        \n",
+    "    def test_lemaatizer_exists(self):\n",
+    "        self.assertIsNotNone(lemmatize_review)\n",
+    "        \n",
+    "    def test_words_lemmatized(self):\n",
+    "        string_to_lem = [\"corpora\", \"rockers\", \"players\", \"syllabi\"]\n",
+    "        res = lemmatize_review(string_to_lem)\n",
+    "        self.assertEqual(res, [\"corpus\", \"rocker\", \"player\", \"syllabus\"])\n",
+    "    \n",
+    "    def test_vectorizer_exists(self):\n",
+    "        self.assertIsNotNone(tfidfvectorize_reviews)\n",
+    "        \n",
+    "    def test_words_vectorized(self):\n",
+    "        tester = [\"This is a review\",\n",
+    "          \"This is a very good review\",\n",
+    "          \"This is a very bad review\",\n",
+    "          \"This is an awful review dont watch\",\n",
+    "          \"This review is outstanding\"\n",
+    "          ]\n",
+    "        res = tfidfvectorize_reviews(tester)\n",
+    "        self.assertEqual(type(res), np.ndarray)\n",
     "    \n",
     "unittest.main(argv=['ingored', '-v'], exit=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b0b7d3f",
+   "metadata": {},
+   "source": [
+    "Now that functions have been tested successfully, implement functions on the reviews..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f71038af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
